<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/ex1"
          android:title="@string/ex1"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/ex2"
          android:title="@string/ex2"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/ex3"
          android:title="@string/ex3"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/ex4"
          android:title="@string/ex4"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/ex5"
          android:title="@string/ex5"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/ex6"
          android:title="@string/ex6"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/ex7"
          android:title="@string/ex7"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/ex8"
          android:title="@string/ex8"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
